--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -73,14 +73,12 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\GameObject\GameObjectExpand.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\ObjectBase\ObjectBaseExpand.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Util\User\UserSetDataInstance.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\ItemType\ItemTypeExpand.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\Panel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\Path\PathUtil.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\Directory\DirectoryUtil.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\SpriteRenderer\SpriteRendererExpand.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Item\IItem.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\User\DataList.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Singleton.cs" />
     <Compile Include="Assets\Hotfix\Module\Config\Command\CommandDataType.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Camera\SmoothFoolow3D.cs" />
@@ -90,11 +88,9 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\Id\IdUtil.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\IPanel.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\User\UserSetData.cs" />
+    <Compile Include="Assets\Hotfix\Module\Core\Manager\GameData\UserSetData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelState.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Manager\GameData\GameDataManager.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Util\User\UserUtil.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Util\User\UserDataInstance.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\PanelType\PanelTypeExpand.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Joystack\Joystack.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Item\AItemView.cs" />
@@ -102,7 +98,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Manager\Manager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Config\IConfig.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\User\UserData.cs" />
+    <Compile Include="Assets\Hotfix\Module\Core\Manager\GameData\UserData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\View\View\IView.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\Asset\AssetType.cs" />
@@ -117,7 +113,6 @@
     <Compile Include="Assets\Hotfix\Module\Config\User\CVType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\Scene\SceneName.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Load\View\LoadPanel.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Util\User\DataListInstance.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\View\LoginPanel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\APanelView.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Load\ViewModel\LoadModel.cs" />
@@ -358,16 +353,13 @@
       <HintPath>Assets\Plugins\NPOI\net45\NPOI.OpenXmlFormats.dll</HintPath>
     </Reference>
     <Reference Include="ILRuntim.Mono.Cecil">
-      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.5\Plugins\ILRuntim.Mono.Cecil.dll</HintPath>
+      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.6\Plugins\ILRuntim.Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="ILRuntime.Mono.Cecil.Mdb">
-      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.5\Plugins\ILRuntime.Mono.Cecil.Mdb.dll</HintPath>
+      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.6\Plugins\ILRuntime.Mono.Cecil.Mdb.dll</HintPath>
     </Reference>
     <Reference Include="ILRuntime.Mono.Cecil.Pdb">
-      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.5\Plugins\ILRuntime.Mono.Cecil.Pdb.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>Library\PackageCache\com.unity.ext.nunit@1.0.5\net35\unity-custom\nunit.framework.dll</HintPath>
+      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.6\Plugins\ILRuntime.Mono.Cecil.Pdb.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:\Program Files\2020.1.8f1c1\Editor\Data\MonoBleedingEdge\lib\mono\4.7.1-api\mscorlib.dll</HintPath>
