修改excel导出工具支持公式 封装json工具 修改文件和文件夹工具 修改路径工具 增加ab包规则打包 删除多余代码 增加扩展类 修改存档管理器 修改md5和加密工具

--- a/Unity.Editor.csproj
+++ b/Unity.Editor.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Assets\Editor\MenuItem\ILRuntime\ILRuntimeCLRBindingMenuItem.cs" />
     <Compile Include="Assets\Editor\MenuItem\ILRuntime\ILRuntimeCrossBindingMenuItem.cs" />
     <Compile Include="Assets\Editor\Util\ObjectType\ObjectType\RectObjectType.cs" />
+    <Compile Include="Assets\Editor\Util\AssetBundle\AssetBundleUtil.cs" />
     <Compile Include="Assets\Editor\Util\ObjectType\ObjectType\ColorObjectType.cs" />
     <Compile Include="Assets\Editor\Util\ObjectType\ObjectTypeAttribute.cs" />
     <Compile Include="Assets\Editor\Util\ObjectType\ObjectType\Vector2IntObjectType.cs" />
@@ -94,6 +95,7 @@
     <Compile Include="Assets\Editor\MenuItem\Lcc\LccMenuItem.cs" />
     <Compile Include="Assets\Editor\Model\NewHotfixPanel.cs" />
     <Compile Include="Assets\Editor\Util\ObjectType\ObjectType\Vector4ObjectType.cs" />
+    <Compile Include="Assets\Editor\Util\AssetBundle\AssetBundleSetting.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Editor\Unity.Editor.asmdef" />
